docs: rewrite README with setup, gates, parity, and workflow guidance